Mon Jun 14 04:26:23 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/ReliableSession.h:
        * dds/DCPS/transport/multicast/ReliableSession.cpp:
        
          - Resolved a deadlock situation due to reverse locking during 
            pub and sub association.
            One thread calls add_associations which acquires TransportImpl
            reservation_lock_ and then MulticastDataLink session_lock_. 
            The reactor thread handle the control message which acquires
            MulticastDataLink session_lock_ and then TransportImpl
            reservation_lock_ due to check_fully_association() call to 
            TransportImpl. To solve the deadlock, the check_fully_association()
            is called outside of session_lock_ locking.
            
          - Updated to send one nak message per DisjointSequence with all ranges 
            instead of one per each range. This would reduce nak message overflow.
            
        * performance-tests/DCPS/MulticastListenerTest/DataReaderListener.h:
        * performance-tests/DCPS/MulticastListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/MulticastListenerTest/publisher.cpp:
        * performance-tests/DCPS/MulticastListenerTest/run_test-16p4s.pl:
        * performance-tests/DCPS/MulticastListenerTest/subscriber.cpp:
        
          Added test result verify using DisjointSequence and added 16p4s test
          script.

Sat Jun 12 15:21:00 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendBuffer.inl:

          Added ACE_INLINE qualifier.

        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:

          Changed an empty #elif to #else to avoid a compilation
          complaint.

Fri Jun 11 12:27:24 UTC 2010  Don Hudson  <hudsond@ociweb.com>
